--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  text: MyString
+  content: MyString
   form: one
 
 two:
-  text: MyString
+  content: MyString
   form: two
